# awx-ees

./: .gitignore  execution-environment.yml  pyproject.toml
.github/workflows/: build-push-test.yml  build.yml
ees/test-ee/: ansible.cfg
ees/test-ee-2/: ansible-navigator.yml-  execution-environment.yml  pyproject.toml
ees/test-ee-2/context/: Dockerfile
ees/test-ee-3/: execution-environment.yml
ees/test-ee-4/: execution-environment.yml  test.yml
ees/test-ee-4/context/: Dockerfile
