[tool.poetry]
name = "awx-ees"
version = "0.1.0"
description = ""
authors = ["Mark Mercado <mmercado@digitalocean.com>"]
license = "UNLICENSE"
readme = "README.md"
packages = [{include = "awx_ees"}]

[tool.poetry.dependencies]
python = "^3.9"
ansible-builder = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
